tests/Fase2-Semantic/error/t26-empty_return_in_a_typed_method.ctds
class aux {

}

class main {
    integer x;
    

    integer add( integer b){
        integer a;
        a = x+b;
        return;
    }

    void main(){
        x=0;
        add(2);
    }
    
}
